[gd_scene load_steps=22 format=2]

[ext_resource path="res://Art/Sound/FX/506588__mrthenoronha__kill-enemy-8-bit.wav" type="AudioStream" id=1]
[ext_resource path="res://Scenes/Scripts/Orc_Big.gd" type="Script" id=2]
[ext_resource path="res://Art/Textures/Monsters/Monster_Dissolve.png" type="Texture" id=3]
[ext_resource path="res://Art/Textures/Monsters/Orc_Big_Walk1.png" type="Texture" id=4]
[ext_resource path="res://Art/Textures/Monsters/Orc_Big_Walk2.png" type="Texture" id=5]
[ext_resource path="res://Art/Sound/FX/214050__taira-komori__magic02.wav" type="AudioStream" id=6]
[ext_resource path="res://Art/Textures/Monsters/Orc_Big_Idle.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "Dissolve",
"speed": 3.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "Walk",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 48 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 21, 1.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1.5, 46.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 1.5, 46.5 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 35, 8 )

[sub_resource type="Animation" id=15]
resource_name = "HeathbarDecreaseTo0"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 20, 16 ), Vector2( 0, 16 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect:color:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.25 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ColorRect:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.25 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ColorRect:color:g")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0.398039, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.25 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("ColorRect:color:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0.833334, -0.25, 0, 0.25, 0, 0.694118, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.25 )
}

[sub_resource type="Animation" id=11]
resource_name = "HeathbarDecreaseTo1"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 40, 16 ), Vector2( 20, 16 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect:color:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.25 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ColorRect:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.25 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ColorRect:color:g")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0.796078, -0.25, 0, 0.25, 0, 0.398039, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.25 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("ColorRect:color:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0.972549, -0.25, 0, 0.25, 0, 0.833334, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.25 )
}

[sub_resource type="Animation" id=13]
resource_name = "HeathbarDecreaseTo2"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 60, 16 ), Vector2( 40, 16 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect:color:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.25 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ColorRect:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.082353, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.25 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ColorRect:color:g")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0.666667, -0.25, 0, 0.25, 0, 0.796078, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.25 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("ColorRect:color:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0.488235, -0.25, 0, 0.25, 0, 0.972549, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.25 )
}

[sub_resource type="Animation" id=9]
resource_name = "HeathbarDecreaseTo3"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 80, 16 ), Vector2( 60, 16 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect:color:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.25 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ColorRect:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.164706, -0.25, 0, 0.25, 0, 0.082353, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.25 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ColorRect:color:g")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0.537255, -0.25, 0, 0.25, 0, 0.666667, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.25 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("ColorRect:color:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0.00392157, -0.25, 0, 0.25, 0, 0.488235, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.25 )
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 80, 16 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect:color:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ColorRect:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.164706, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ColorRect:color:g")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0.537255, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("ColorRect:color:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0.00392157, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="Orc_Big" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -16 )
scale = Vector2( 8, 8 )
frames = SubResource( 1 )
animation = "Idle"
playing = true

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, -16 )
shape = SubResource( 2 )

[node name="FloorChecker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 33 )
collision_mask = 2

[node name="TopChecker" type="Area2D" parent="."]
collision_layer = 16
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopChecker"]
position = Vector2( 0, -65.5 )
shape = SubResource( 3 )

[node name="SidesChecker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="SidesChecker"]
position = Vector2( -25.5, -14.5 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="SidesChecker"]
position = Vector2( 25.5, -14.5 )
shape = SubResource( 8 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="SidesChecker"]
shape = SubResource( 14 )

[node name="TopHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -8.0
pitch_scale = 0.77

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -30.666
pitch_scale = 1.07

[node name="Healthbar" type="Node2D" parent="."]

[node name="ColorRect2" type="ColorRect" parent="Healthbar"]
margin_left = -40.0
margin_top = -88.0
margin_right = 40.0
margin_bottom = -72.0
color = Color( 0.223529, 0.247059, 0.282353, 1 )

[node name="ColorRect" type="ColorRect" parent="Healthbar"]
margin_left = -40.0
margin_top = -88.0
margin_right = 40.0
margin_bottom = -72.0
rect_pivot_offset = Vector2( -16, 176 )
color = Color( 0.00392157, 0.537255, 0.164706, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Healthbar"]
autoplay = "RESET"
anims/HeathbarDecreaseTo0 = SubResource( 15 )
anims/HeathbarDecreaseTo1 = SubResource( 11 )
anims/HeathbarDecreaseTo2 = SubResource( 13 )
anims/HeathbarDecreaseTo3 = SubResource( 9 )
anims/RESET = SubResource( 10 )

[connection signal="body_entered" from="TopChecker" to="." method="_on_TopChecker_body_entered"]
[connection signal="body_entered" from="SidesChecker" to="." method="_on_SidesChecker_body_entered"]
